--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_calculator_app",
+  "name": "react_math_magicians",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
